--- a/style.css
+++ b/style.css
@@ -1,27 +1,227 @@
 
-        *{
-            font-family: 'Courier New', Courier, monospace;
-        }
-         h1{
-            color: blueviolet;
-            background-color: goldenrod;
-         }
-         p{
-             color:antiquewhite;
-             background-color: black;
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Roboto+Slab:wght@100..900&display=swap');
 
-         }
-         #heading{
-            color: white;
-         }
-         #main-type{
-            font-size: 60px;
-            background-color: brown;
-         }
-         .title{
-            background-color: chocolate;
-            color: azure;
-         }
-         h1,h2,h3,h5,p{
-            font-style: oblique;
-         }
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #333;
+    line-height: 1.6;
+}   
+
+header{
+    width: 100%;
+    height: 100px;
+    position: fixed;
+    top: 0;
+    height:60px;
+    background-color: #fff;
+}
+.nav-container{
+    width:100%;
+    height:100%;
+    display:flex;
+    justify-content:center;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width:100%;
+    max-width:1200px;
+
+}
+.logo{
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    font-family: 1.5rem;
+    color: #1a73e8;
+    font-weight: bold;
+
+}
+.nav-links{
+    display:flex;
+    gap:2rem;
+    list-style:none;
+}
+.nav-links a{
+    text-Decoration:none;
+    color:#666;
+    font-weight:700;
+    padding:0.5rem
+}
+.nav-links a:hover,
+.nav-links .active{
+    color:#1a73e8;
+}
+
+.nav-button{
+    display:flex;
+    gap:1rem;
+    align-items:center;
+
+
+}
+.nav-button .login-btn{
+    padding:0.5rem 1.5rem;
+    color: #1a73e8;
+    text-Decoration:none;
+    border-radius:5px;
+    font-weight:700;
+
+
+}
+.login-btn:hover{
+    background-color: #f0f4fe;
+}
+.register-btn{
+    padding:0.5rem 1.5rem;
+    background-color: #1a73e8;
+    color:#fff;
+    text-Decoration:none;
+    border-radius:5px;
+    font-weight:700;
+}
+.hero{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    background-color: #1a73e8;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    color: #fff;
+    text-align: center;
+
+}
+.hero-content{
+    font-size: 1.2rem;
+    margin-bottom: 1.5rem;
+}
+.hero h1{
+    font-size: 3rem;
+    margin-bottom: 1rem;
+}
+.hero p{
+    font-size: 1rem;
+    margin-bottom: 1.5rem;
+}
+.btn{
+    padding: 1rem 2rem;
+    background-color: #fff;
+    color: #1a73e8;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: 700;
+}
+.featured-courses{
+    width: 100%;
+    max-width: 1200px;
+    padding: 0 1rem;
+    margin-top: 2rem;
+}
+.featured-courses h2{
+color: #fff;
+font-size: 2rem;
+margin-bottom: 1rem;
+}
+.course-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 1.5rem;
+    
+}
+.course-card{
+    background-color: rgba(255,255,255,0.2);
+    border-radius: 5px;
+    padding: 1.5rem 1rem;
+    text-align: center;
+    border: 1px solid rgba(255,255,255,0.2);
+}
+.course-img{
+    width: 50px;
+    height: 50px;
+    background-color: rgba(255,255,255,0.2);
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto 0.8rem;
+    font-size: 1.2rem;
+    color: #fff;
+}
+.course-card h3{
+    color: #fff;
+    margin-bottom: 0.5rem;
+    font-size: 0.8rem;
+}
+.course-card p{
+    color: #fff;
+    margin-bottom: 0.5rem;
+    font-size: 0.8rem;
+}
+.course-duration{
+    padding: 0.2rem 0.8rem;
+    background-color: rgba(255,255,255,0.2);
+    color: #fff;
+    font-size: 0.8rem;
+    border-radius: 10px ;
+    border: 1px solid rgba(255,255,255,0.2);;
+}
+.about{
+padding: 5rem 2rem;
+background-color: #f8f9f8;
+
+}
+.about-content{
+    max-width: 1200px;
+    margin:  0 auto;
+    text-align: center;
+
+}
+.about h2{
+    font-size: 3rem;
+    margin-bottom: 2rem;
+    color: #333;
+   
+}
+.about p{
+    padding: 2rem;
+     margin:  0 auto 3rem;
+     font-size: 1.2rem; 
+}
+.stats{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+    gap: 2rem;
+    max-width: 800px;
+    
+}
+.stat-item{
+    padding: 2rem;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+
+}
+.stat-item i{
+    font-size: 2rem;
+    color: #1a73e8;
+    margin-bottom: 0.5rem;
+
+}
+.stat-item h3{
+    font-size: 2rem;
+     color: #333;
+    margin-bottom: 0.5rem;
+
+}
+.stat-item p{
+    font-weight: 400;
+    
+
+}
